attempt 6: fix header spacing on iOS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,8 +54,8 @@ a[href] {
 }
 
 .header-height {
-  letter-spacing: -0.1px; 
-  transform: scale(1.05, 0.95);
+  letter-spacing: normal;
+  word-spacing: normal; 
   font-weight: 600;
   font-kerning: none;
   margin-bottom: 10px;
